# BSGateway

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  E2E_GUIDE.md  LICENSE  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  gateway.yaml  nginx.conf  package-lock.json  package.json  pyproject.toml  run-e2e-tests.sh  tests  vercel.json
.agent/: progress.txt  tasks.json
.claude/: README.md
.claude/commands/: test.md
.devcontainer/: devcontainer.json  docker-compose.yml
.devcontainer/scripts/: post-start.local.sh  post-start.sh
.github/workflows/: cd.yml  ci.yml  demo-smoke.yml
alembic/: env.py
alembic/versions/: 0001_baseline_schema.py  0002_audit_outbox.py  0003_drop_api_keys.py
bsgateway/: audit_publisher.py  streams.py
bsgateway/api/: app.py  deps.py
bsgateway/api/routers/: apikeys.py  audit.py  auth.py  chat.py  execute.py  feedback.py  intents.py  presets.py  rules.py  tenants.py  usage.py  workers.py
bsgateway/apikey/: models.py  repository.py  service.py
bsgateway/audit/: repository.py  service.py
bsgateway/chat/: ratelimit.py  service.py
bsgateway/core/: cache.py  config.py  database.py  exceptions.py  logging.py  migrate.py  security.py  seed.py  sql_loader.py  utils.py
bsgateway/demo/: seed.py
bsgateway/embedding/: service.py
bsgateway/executor/: __init__.py  base.py  claude_code.py  codex.py  config.py  dispatcher.py  install_token.py  registry.py  sql_loader.py
bsgateway/executor/sql/: executor_queries.sql  executor_schema.sql
bsgateway/mcp/: __init__.py  router.py  schemas.py  service.py
bsgateway/presets/: models.py  registry.py  repository.py  schemas.py  service.py
bsgateway/routing/: cache_classifier.py  collector.py  constants.py  hook.py  models.py  repository.py  strategies.py
bsgateway/routing/classifiers/: __init__.py  llm.py  ml.py  static.py
bsgateway/routing/sql/: apikey_queries.sql  apikey_schema.sql  audit_queries.sql  audit_schema.sql  feedback_queries.sql  feedback_schema.sql  queries.sql  rules_queries.sql  rules_schema.sql  schema.sql  tenant_queries.sql  tenant_schema.sql
bsgateway/rules/: budget.py  conditions.py  engine.py  intent.py  models.py  repository.py  schemas.py
bsgateway/supervisor/: __init__.py  client.py  service_token.py
bsgateway/tenant/: models.py  repository.py  service.py
bsgateway/tests/: conftest.py  test_advanced_conditions.py  test_advanced_routing.py  test_alembic_baseline.py  test_alembic_drop_api_keys.py  test_api_apikeys.py  test_api_auth.py  test_api_chat.py  test_api_feedback.py  test_api_presets.py  test_api_rules.py  test_api_tenants.py  test_api_usage.py  test_apikey_auth.py  test_apikey_repository.py  test_apikey_service.py  test_app.py  test_audit.py  test_audit_gap_integration_scenarios.py  test_audit_gap_security_regression.py  test_audit_gap_stress_and_failure_modes.py  test_audit_publisher_outbox.py  test_auth_bsvibe.py  test_auth_dispatch.py  test_authz_route_matrix.py  test_authz_scope_matrix.py  test_auto_provision.py  test_cache.py  test_chat_service.py  test_chat_service_executor_streaming.py  test_classifier_cache.py  test_collector.py  test_concurrency.py  test_conditions.py  test_config_secrets.py  test_config_token_cutover.py  test_database.py  test_demo_seed.py  test_design_tokens_drift.py  test_dispatcher.py  (+36 more)
bsgateway/tests/test_worker/: test_config.py  test_executors.py  test_main.py
deploy/: .env.bak  .env.bak-cutover-20260504-224704  .env.demo.local  .env.example  Dockerfile  docker-compose.demo.local.yml  docker-compose.yml
docs/: BSNEXUS_METADATA_CONTRACT.md  TODO.md  scopes.md
docs/e2e/: apikey-checklist.md  auto-provision-checklist.md  mcp-injection-e5-checklist.md
frontend/: .env.example  .gitignore  README.md  UI_GUIDE.md  eslint.config.js  index.html  next.config.mjs  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  postcss.config.mjs  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vercel.json  vite.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api-keys/: page.tsx
frontend/app/audit/: page.tsx
frontend/app/intents/: page.tsx
frontend/app/models/: page.tsx
frontend/app/rules/: page.tsx
frontend/app/test/: page.tsx
frontend/app/usage/: page.tsx
frontend/e2e/: api-keys.spec.ts  audit.spec.ts  auth.spec.ts  cache.spec.ts  dashboard.spec.ts  demo-smoke.spec.ts  helpers.ts  intents.spec.ts  login.spec.ts  mobile.spec.ts  models.spec.ts  navigation.spec.ts  routing-test.spec.ts  rules.spec.ts  simulator.spec.ts  ui.spec.ts  usage.spec.ts
frontend/e2e/fixtures/: mock-api.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: apikeys.ts  audit.ts  client.ts  executors.ts  intents.ts  routes.ts  rules.ts  tenants.ts  usage.ts
frontend/src/components/common/: DataTable.tsx  ErrorBanner.tsx  LanguageSwitcher.tsx  LoadingSpinner.tsx
frontend/src/components/help/: HelpButton.tsx  HelpPanel.tsx
frontend/src/components/layout/: AppShell.tsx  Layout.tsx  PageBoundary.tsx  Sidebar.tsx
frontend/src/components/rules/: DefaultFallbackCard.tsx  EmbeddingSettingsCard.tsx  RouteCard.tsx
frontend/src/hooks/: useApi.ts  useAuth.ts  useDeleteConfirm.ts  useForm.ts
frontend/src/i18n/: index.ts
frontend/src/page-views/: ApiKeysPage.tsx  AuditPage.tsx  DashboardPage.tsx  IntentsPage.tsx  LoginPage.tsx  ModelsPage.tsx  RoutesPage.tsx  RoutingTestPage.tsx  RulesPage.tsx  UsagePage.tsx
frontend/src/pages/: ApiKeysPage.tsx  AuditPage.tsx  AuthCallbackPage.tsx  DashboardPage.tsx  IntentsPage.tsx  LoginPage.tsx  ModelsPage.tsx  RoutesPage.tsx  RoutingTestPage.tsx  RulesPage.tsx  UsagePage.tsx
frontend/src/types/: api.ts
frontend/src/utils/: modelLabel.ts
k8s/: configmap.yaml  deployment.yaml  ingress.yaml  namespace.yaml  poddisruptionbudget.yaml  rbac.yaml  secret.yaml  secret.yaml.example  service.yaml
scripts/: run-e2e-tests.sh  seed_supabase.py  start-gateway.sh  test-endpoints.sh  verify_alembic_parity.sh
worker/: README.md  __main__.py  config.py  executors.py  install.sh  main.py  pyproject.toml
(+4 files in other folders)
