[project]
name = "bsgateway"
version = "0.1.0"
description = "LLM Gateway for cost-optimized routing across local, OpenAI, and Anthropic models"
requires-python = ">=3.11"
dependencies = [
    "litellm[proxy]>=1.60.0",
    "pydantic-settings>=2.0.0",
    "structlog>=23.0.0",
    "pyyaml>=6.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "cryptography>=42.0.0",
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "bsvibe-auth[fastapi] @ git+https://github.com/BSVibe/BSVibe-Auth.git@v0.4.0#subdirectory=python",
    # Phase A Batch 5 — pin all bsvibe-python packages to integration/phase-a
    # (the unified ref containing core/fastapi/sqlalchemy/authz/alerts).
    "bsvibe-core @ git+https://github.com/BSVibe/bsvibe-python.git@integration/phase-a#subdirectory=packages/bsvibe-core",
    "bsvibe-fastapi @ git+https://github.com/BSVibe/bsvibe-python.git@integration/phase-a#subdirectory=packages/bsvibe-fastapi",
    "bsvibe-sqlalchemy @ git+https://github.com/BSVibe/bsvibe-python.git@integration/phase-a#subdirectory=packages/bsvibe-sqlalchemy",
    "bsvibe-authz @ git+https://github.com/BSVibe/bsvibe-python.git@integration/phase-a#subdirectory=packages/bsvibe-authz",
    # Phase Audit Batch 2 — outbox-pattern audit emission for `gateway.*`
    # domain events. Pin matches the other bsvibe-* packages on
    # ``integration/phase-a`` so a single ref resolves the whole graph.
    # The merge of ``feat/bsvibe-audit-impl`` (PR #7 on bsvibe-python)
    # into ``integration/phase-a`` is a release-gate for this PR; uv.lock
    # is regenerated post-merge. Local dev runs editable from
    # ``~/Works/bsvibe-python/audit/packages/bsvibe-audit`` via
    # ``uv pip install --no-deps -e <path>`` until then.
    "bsvibe-audit @ git+https://github.com/BSVibe/bsvibe-python.git@integration/phase-a#subdirectory=packages/bsvibe-audit",
    "alembic>=1.13.0",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.1.0",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["bsgateway/tests", "tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "RUF"]
ignore = [
    "B008",   # Depends() in default args is idiomatic FastAPI
    "B017",   # pytest.raises(Exception) is fine in tests
]

[tool.coverage.run]
source = ["bsgateway"]
