[project]
name = "bsgateway"
version = "0.1.0"
description = "LLM Gateway for cost-optimized routing across local, OpenAI, and Anthropic models"
requires-python = ">=3.11"
dependencies = [
    "litellm[proxy]>=1.60.0",
    "pydantic-settings>=2.0.0",
    "structlog>=23.0.0",
    "pyyaml>=6.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "cryptography>=42.0.0",
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "bsvibe-auth[fastapi] @ git+https://github.com/BSVibe/BSVibe-Auth.git@v0.5.0#subdirectory=python",
    # Phase Audit Batch 2 — pin all bsvibe-python packages to
    # ``integration/phase-audit-batch-2`` (supersedes ``integration/phase-a``
    # by adding ``bsvibe-audit`` and ``bsvibe-llm`` on top of the four
    # Phase A packages: core/fastapi/sqlalchemy/authz/alerts). Single ref
    # so uv resolves the whole bsvibe-python graph from one commit.
    "bsvibe-core @ git+https://github.com/BSVibe/bsvibe-python.git@main#subdirectory=packages/bsvibe-core",
    "bsvibe-fastapi @ git+https://github.com/BSVibe/bsvibe-python.git@main#subdirectory=packages/bsvibe-fastapi",
    "bsvibe-sqlalchemy @ git+https://github.com/BSVibe/bsvibe-python.git@main#subdirectory=packages/bsvibe-sqlalchemy",
    "bsvibe-authz @ git+https://github.com/BSVibe/bsvibe-python.git@main#subdirectory=packages/bsvibe-authz",
    # Phase Audit Batch 2 — outbox-pattern audit emission for `gateway.*`
    # domain events. Lives only on ``integration/phase-audit-batch-2``
    # (the merge of ``feat/bsvibe-audit-impl`` + ``feat/bsvibe-llm-impl``
    # on top of ``integration/phase-a``).
    "bsvibe-audit @ git+https://github.com/BSVibe/bsvibe-python.git@main#subdirectory=packages/bsvibe-audit",
    "alembic>=1.13.0",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.1.0",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["bsgateway/tests", "tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "RUF"]
ignore = [
    "B008",   # Depends() in default args is idiomatic FastAPI
    "B017",   # pytest.raises(Exception) is fine in tests
]

[tool.coverage.run]
source = ["bsgateway"]
