[project]
name = "bsgateway-worker"
version = "0.1.0"
description = "BSGateway self-hosted worker — runs Claude Code / Codex tasks dispatched from a gateway."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "structlog>=23.0.0",
    "pydantic-settings>=2.0.0",
    "redis>=5.0.0",
]

[project.scripts]
bsgateway-worker = "worker.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["worker"]
